Updated: Header.css: blog anker height issue on mobile.

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -122,6 +122,5 @@ header {
       border: 1px solid #eee;
       padding: 2px;
       border-radius: 5px;
-      height: 120px;
     }
   }
